<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/getHomeScreen"
            android:title="Home"/>
        <item
            android:id="@+id/rSearch"
            android:title="Recipe Search"/>
        <item
            android:id="@+id/mTimeline"
            android:title="My TimeLine"/>
        <item
            android:id="@+id/friendRequest"
            android:title="@string/friendRequest"/>
        <item
            android:id="@+id/shoppingList"
            android:title="@string/shoppingList"/>
        <item
            android:id="@+id/userSearch"
            android:title="@string/userSearch"/>
        <item
            android:id="@+id/rCreate"
            android:title="@string/rCreate"/>
        <item
            android:id="@+id/pantry"
            android:title="@string/pantry"/>
        <item
            android:id="@+id/rr_select"
            android:title="@string/rr_selector"/>

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/logout"
                android:title="Logout"
                />
            <item android:id="@+id/Admin"
                android:title="Admin Controls"/>
        </menu>
    </item>

</menu>