<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/rCreate_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/rCreate_titleHint"
                android:hint="@string/rCreate_titleHint"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rCreate_image" />

        <ImageView
            android:id="@+id/rCreate_image"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            android:background="@color/cardview_dark_background"

            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/rCreate_getImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rCreate_getPhoto" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rCreate_thumbnail" />

        <ImageView
            android:id="@+id/rCreate_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            android:background="@color/cardview_dark_background"
            android:visibility="gone" />
        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/rCreate_getThumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rCreate_getPhoto" />


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/rCreate_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/rCreate_descriptionHint"
                android:hint="@string/rCreate_descriptionHint"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/rIngredient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/rIngredient_nameHint"
            android:hint="@string/rIngredient_nameHint"
            android:inputType="text" />

        <EditText
            android:id="@+id/rIngredient_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/rIngredient_amountHint"
            android:hint="@string/rIngredient_amountHint"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/rIngredient_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/rIngredient_typeHint"
            android:hint="@string/rIngredient_typeHint"
            android:inputType="text" />

        <Button
            android:id="@+id/rIngredient_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rIngredient_submit" />

        <LinearLayout
            android:id="@+id/rCreate_ingredientContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/rCreate_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/rCreate_stepsHint"
                android:hint="@string/rCreate_stepsHint"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/rCreate_numberServings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/rCreate_numberServingsHint"
                android:hint="@string/rCreate_numberServingsHint"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/rCreate_prepTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/rCreate_prepTimeHint"
                android:hint="@string/rCreate_prepTimeHint"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/rCreate_totalTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/rCreate_totalTimeHint"
                android:hint="@string/rCreate_totalTimeHint"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/rCreate_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/rCreate_tagsHint"
                android:hint="@string/rCreate_tagsHint"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/rCreate_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rCreate_submit" />
    </LinearLayout>
</ScrollView>