<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/pantry_item_text"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pantry_item_default_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
    <View
        android:id="@+id/pantry_item_center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>
    <Button
        android:id="@+id/pantry_item_edit"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pantry_item_edit"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/pantry_item_center"
        android:layout_below="@id/pantry_item_text"
        android:layout_alignBottom="@id/pantry_item_remove"/>
    <Button
        android:id="@+id/pantry_item_remove"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pantry_item_remove"
        android:layout_below="@id/pantry_item_text"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/pantry_item_center"/>
    <Button
        android:id="@+id/pantry_item_save"
        android:visibility="gone"
        android:text="@string/pantry_item_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/pantry_item_center"
        android:layout_below="@id/pantry_item_edit" />
    <Button
        android:id="@+id/pantry_item_cancel"
        android:visibility="gone"
        android:text="@string/pantry_item_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/pantry_item_center"
        android:layout_below="@id/pantry_item_remove"
        android:layout_alignBottom="@id/pantry_item_save"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/pantry_item_type_tiet"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pantry_item_save">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/pantry_item_type_in"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textAutoComplete"
            android:autofillHints=""
            android:hint="@string/pantry_ingredient_type"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/pantry_item_amount_tiet"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pantry_item_type_tiet">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/pantry_item_amount_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:autofillHints=""
            android:hint="@string/pantry_ingredient_amount"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/pantry_item_unit_tiet"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pantry_item_amount_tiet">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/pantry_item_unit_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:autofillHints=""
            android:hint="@string/pantry_ingredient_unit"/>
    </android.support.design.widget.TextInputLayout>


</RelativeLayout>