<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/shoppingListItem_textView"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/shoppingListItem_completeButton"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@id/shoppingListItem_completeButton"/>
    <Button
        android:id="@+id/shoppingListItem_completeButton"
        android:text="@string/shoppingListItem_Fulfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"/>
    <View
        android:id="@+id/shoppingListItem_centerLine"
        android:layout_centerInParent="true"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <Button
        android:id="@+id/shoppingListItem_editButton"
        android:text="@string/shoppingListItem_Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shoppingListItem_completeButton"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/shoppingListItem_centerLine"/>
    <Button
        android:id="@+id/shoppingListItem_removeButton"
        android:text="@string/ShoppingListItem_Remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shoppingListItem_completeButton"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/shoppingListItem_centerLine"/>
    <Button
        android:id="@+id/shoppingListItem_saveButton"
        android:text="@string/ShoppingListItem_Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shoppingListItem_editButton"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/shoppingListItem_centerLine"/>
    <Button
        android:id="@+id/shoppingListItem_cancelButton"
        android:text="@string/ShoppingListItem_Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shoppingListItem_removeButton"
        android:layout_toEndOf="@id/shoppingListItem_centerLine"
        android:layout_alignParentEnd="true"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/shoppingListItem_ingredientNameGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/shoppingListItem_cancelButton">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/shoppingListItem_ingredientNameField"
            android:autofillHints=""
            android:hint="@string/ShoppingListItem_NameHint"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/shoppingListItem_ingredientAmountGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shoppingListItem_ingredientNameGroup">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/shoppingListItem_ingredientAmountField"
            android:autofillHints=""
            android:hint="@string/ShoppingListItem_AmountHint"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/shoppingListItem_ingredientUnitGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shoppingListItem_ingredientAmountGroup">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/shoppingListItem_ingredientUnitField"
            android:hint="@string/ShoppingListItem_UnitHint"
            android:autofillHints=""
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>



</RelativeLayout>