<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/save_bio"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generic_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/user_profile_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user_profile_photo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@color/cardview_light_background"
        android:visibility="visible"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/profile_name" />

    <Button
        android:id="@+id/pickPic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"

        android:text="@string/get_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_photo" />


    <TextView
        android:id="@+id/bio_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/pickPic"
        tools:text="Your Bio is Here" />

    <EditText
        android:id="@+id/edit_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autofillHints="Edit your Bio"
        android:hint="@string/edit_your_bio"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:minLines="2"
        android:padding="10dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bio_preview" />

    <Button
        android:id="@+id/save_edits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/SaveEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_bio" />

    <Button
        android:id="@+id/submitChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_profile"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>